<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:weightSum="2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/weekly_greeting"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            android:id="@+id/edito"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/today_plan"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:weightSum="1"
        android:orientation="horizontal">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:text="@string/log_workout"
                    />
                <Button
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:text="@string/open_timer"
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:text="@string/create_workout"
                    />
                <Button
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:text="@string/view_history"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>